# company_member

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Cargo.toml  Dockerfile  Dockerfile.dev
backend/migrations/: 20260420000001_create_employees.sql  20260420000002_create_personnel_histories.sql  20260420000003_seed_data.sql
backend/src/: errors.rs  main.rs
backend/src/handlers/: employees.rs  mod.rs  personnel_histories.rs
backend/src/models/: employee.rs  mod.rs  personnel_history.rs
frontend/: jest.config.ts  package.json  playwright.config.ts
frontend/e2e/: employees-create.spec.ts  employees-edit.spec.ts  employees-filter.spec.ts  employees-list.spec.ts  employees-tsv.spec.ts  global-setup.ts  personnel-history.spec.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/employees/[id]/: page.tsx
frontend/src/app/employees/[id]/edit/: page.tsx
frontend/src/app/employees/new/: page.tsx
frontend/src/components/common/: Modal.tsx  StatusBadge.tsx  TsvPasteArea.tsx
frontend/src/components/employees/: EmployeeFilterBar.tsx  EmployeeForm.tsx  EmployeeTable.tsx  PersonnelHistoryList.tsx
frontend/src/lib/: api.ts  tsv.test.ts  tsv.ts  types.ts
