[package]
name    = "company-member-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "company-member-backend"
path = "src/main.rs"

[dependencies]
actix-web  = "4"
actix-cors = "0.7"
tokio      = { version = "1", features = ["full"] }
sqlx       = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
chrono     = { version = "0.4", features = ["serde"] }
dotenvy    = "0.15"
thiserror  = "1"
log        = "0.4"
env_logger = "0.10"
regex      = "1"
